# pycounts

./: Counter.py  DEFCounter.py  ZEN.py  zen.txt
contador_de_palabras/: CHANGELOG.md  CONTRIBUTING.md  Pruebas.txt  README.md  pyproject.toml
contador_de_palabras/docs/: Makefile  conf.py  example.ipynb  make.bat
contador_de_palabras/src/contador_de_palabras/: __init__.py
contador_de_palabras/src/pycounts/: __init__.py  pycounts.py
contador_de_palabras/tests/: test_pycounts.py
