[tool.poetry]
name = "contador_de_palabras"
version = "B"
description = "Cuenta la cantidad de palabras de cualquier texto"
authors = ["Pablo Garcia Ollero"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
