[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Cuenta la cantidad de palabras de cualquier texto"
authors = ["Pablo Garcia Ollero"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
